# ProyectoLoboStock

./: .gitignore  bd.sql  inventario.db  main.py  pyproject.toml  readme  solicitudes.db
assets/: manifest.json
database/: db_manager.py
src/components/: custom_button.py  theme.py
src/pages/: admin_page.py  form_page.py  home_page.py  inventario_page.py  login_page.py  solicitudes_page.py
src/pages/administration/: admin_page.py  inventario_page.py  solicitudes_page.py
src/pages/students/: form_page.py  home_page.py
src/utils/: bd.py  helpers.py
